# discuss

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  discuss.db  discuss.db-shm  discuss.db-wal  package-lock.json  sqlite3.lib
migrations/2022-03-15-014346_discuss_main/: down.sql  up.sql
src/: main.rs  module.rs  routes.rs  schema.rs
ui/: package-lock.json  package.json  vue.config.js
ui/src/: App.vue  main.js
ui/src/components/: discuss.vue
